# autoencoder-based-anomaly-detection

./: .gitignore  README.md  analyze_anomalies.py  config.py  pyproject.toml  train.py
models/: attention_ae.py  cae.py  wavenet_ae.py
modules/: data_module.py  lightning_module.py  loss_functions.py  optimizers.py
src/: anomaly_visualization.py  data_module.py  lightning_module.py  loss_functions.py  transforms.py
